--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <!-- --------------------Nav Bar-------------------------------- -->
             <nav>
-                <img src="/parlo-logo.png" alt="this is a logo">
+                <img src="images/parlo-logo.png" alt="this is a logo">
                 
                 <section class="nav2" id="navLinks">
                     <ul>
@@ -39,11 +39,11 @@
             <div class="dropdown-menu">
                 <section class="nav2 dropSect">
                     <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#thirdSect">Shop</a></li>
-                        <li><a href="#">Accessories</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#shop">Shop</a></li>
+                        <li><a href="#accessories">Accessories</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Services</a></li>
+                        <li><a href="#ourServices">Services</a></li>
                     </ul>
                     <button id="dropBtn">Support Us</button>
                 </section>
@@ -60,7 +60,7 @@
                 </section>
 
                 <section class="firstSect2">
-                    <img src="/bagslider1.png" alt="first bag image">
+                    <img src="images/bagslider1.png" alt="first bag image">
                 </section>
             </div>
             
@@ -71,18 +71,18 @@
         <div class="secondSect" id="accessories">
             <div class="secondSect1">
                 <h3>Men's Backpack</h3>
-                <a href="#" id="secondSectLink"><img src="/mens-bagpack.png" alt="mens-bagpack"></a>
+                <a href="#" id="secondSectLink"><img src="images/mens-bagpack.png" alt="mens-bagpack"></a>
             </div>
 
             <div class="secondSect2">
                 <div class="sect2p1">
                     <h3>Travel Bag</h3>
-                    <a href="#" id="secondSectLink"><img src="/travel-bag.png" alt="travel-bagpack"></a>
+                    <a href="#" id="secondSectLink"><img src="images/travel-bag.png" alt="travel-bagpack"></a>
                 </div>
 
                 <div class="sect2p2">
                     <h3>Women's <br> Backpack</h3>
-                    <a href="#" id="secondSectLink"><img src="/women-bagpack.png" alt="womens-bagpack"></a>
+                    <a href="#" id="secondSectLink"><img src="images/women-bagpack.png" alt="womens-bagpack"></a>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
             <div class="thirdSect2">
                 <div class="sect3p1">
                     <section class="productCard1">
-                        <img src="/product-card1.jpg" alt="bag-product">
+                        <img src="images/product-card1.jpg" alt="bag-product">
                         <section class="cardInfo">
                             <p>Demo Product Name</p>
                             <strong>$60.00</strong>
@@ -113,7 +113,7 @@
                     </section>
 
                     <section class="productCard1">
-                        <img src="/product-card2.jpg" alt="bag-product">
+                        <img src="images/product-card2.jpg" alt="bag-product">
                         <section class="cardInfo">
                             <p>Demo Product Name</p>
                             <strong>$50.00</strong>&nbsp;
@@ -132,7 +132,7 @@
 
                 <div class="sect3p2">
                     <section class="productCard2">
-                        <img src="/product-card3.jpg" alt="bag-product">
+                        <img src="images/product-card3.jpg" alt="bag-product">
                         <section class="cardInfo">
                             <p>Demo Product Name</p>
                             <strong>$30.00</strong>
@@ -148,7 +148,7 @@
                     </section>
 
                     <section class="productCard2">
-                        <img src="/product-card4.jpg" alt="bag-product">
+                        <img src="images/product-card4.jpg" alt="bag-product">
                         <section class="cardInfo">
                             <p>Demo Product Name</p>
                             <strong>$60.00</strong>
@@ -173,7 +173,7 @@
         <!-- ----------------fourth section of the body-------------------------------- -->
         <div class="fourthSect" id="ourServices">
             <div class="fourthSect1">
-                <img src="/free-shipping.png" alt="free-shipping">
+                <img src="images/free-shipping.png" alt="free-shipping">
                 <section class="shipping">
                     <h4>Free Shipping</h4>
                     <p>Most of our products are free <br> shipping.</p>
@@ -181,7 +181,7 @@
             </div>
 
             <div class="fourthSect2">
-                <img src="/support.png" alt="customer support">
+                <img src="images/support.png" alt="customer support">
                 <section class="support">
                     <h4>Customer Support</h4>
                     <p>24x7 Customer Support.</p>
@@ -189,7 +189,7 @@
             </div>
 
             <div class="fourthSect3">
-                <img src="/security.png" alt="free-shipping">
+                <img src="images/security.png" alt="free-shipping">
                 <section>
                     <h4>Secure Payment</h4>
                     <p>Most Secure Payment <br> for customers.</p>
@@ -201,7 +201,7 @@
         <footer>
             <div class="footerFirstSect">
                 <div class="footSect1">
-                    <img src="/parlo-logo.png" alt="this is a logo">
+                    <img src="images/parlo-logo.png" alt="this is a logo">
                     <p>Subscribe to our newsleter, Enter your email address</p>
                     <section>
                         <input type="email" id="email" placeholder="Enter your email...">
@@ -237,7 +237,7 @@
 
             <div class="footerSecondSect">
                 <p>Copyright &copy; All Right Reserved.</p>
-                <img src="/payment-2.png" alt="">
+                <img src="images/payment-2.png" alt="">
             </div>
 
             <p id="lastPara">Made with <i class="fa-solid fa-heart"></i> <br> by Maduabuchi Emeakama</p>
