--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200;300;500&family=EB+Garamond:wght@400;500;600;700;800&family=Montserrat:wght@100;300;400;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/71f6d42350.js" crossorigin="anonymous"></script>
-        <script src="/script.js" defer></script>
+        <script src="script.js" defer></script>
         <title>Parlo</title>
     </head>
 
